[tool.poetry]
name = "opencitybot"
version = "0.1.0"
description = ""
authors = ["sairam4123 <sairamkumar2022@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
asyncpg = "^0.21.0"
Quart = "^0.13.1"
"discord.py" = "1.5.1"
psutil = "^5.7.3"
Pillow = "^8.0.1"
wikipedia = "^1.4.0"
asyncurban = "^0.3.3"
aiowiki = {git = "https://github.com/Gelbpunkt/aiowiki.git"}
dblpy = "^0.4.0"
better-profanity = "^0.7.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
parsedatetime = "^2.6"
colour = "^0.1.5"

[tool.poetry.dev-dependencies]
psycopg2 = "^2.8.6"
migra = "^1.0.1605230943"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
